# local-file-locker

./: README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: workflow.yaml
app/: layout.tsx  page.tsx
components/: Finder.tsx
components/buttons/: NewFile.tsx
lib/: mime.ts  opfs.ts
wasm-crypto/: Cargo.toml
wasm-crypto/src/: lib.rs
